syntax = "proto3";

package com.parking.grpc;

option java_package = "com.parking.grpc";
option java_multiple_files = true;

service LprService {
  rpc ProcessLpr(LprRequest) returns (LprResponse);
}

message LprRequest {
  string image_path = 1;
}

message LprResponse {
  string license_plate = 1;
  bool is_paid = 2;
}
