syntax = "proto3";

package com.parking.grpc;

option java_package = "com.parking.grpc";
option java_multiple_files = true;

service PaymentService {
  rpc CheckPayment(PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string licensePlate = 1;
}

message PaymentResponse {
  bool isPaid = 1;
}
